---------------------------

Dmitry Baikov
Steven Chamberlain
Thom Johansen
Thibault LeMeur
Pieter Palmers
Tom Szilagyi
Andrzej Szombierski 
Kjetil S.Matheussen
Pieter Palmers
Tim Blechmann
Marc-Olivier Barre
Nedko Arnaudov
Fernando Lopez-Lezcano
Romain Moret
Florian Faber
Michael Voigt
Torben Hohn  
Paul Davis

---------------------------
  Jackdmp changes log
---------------------------

2009-04-22 Stephane Letz  <letz@grame.fr>

	* jackctl_server_load_master renamed to jackctl_server_switch_master, jackctl_server_unload_master is removed.

2009-04-21 Stephane Letz  <letz@grame.fr>

	* Add jackctl_server_load_master/jackctl_server_unload_master API.

2009-04-20 Stephane Letz  <letz@grame.fr>

	* In ALSA audio card reservation code, tries to open the card even if reservation fails.
	* Clock source setting on Linux.

2009-04-08 Stephane Letz  <letz@grame.fr>

	* Native MIDI backend (JackCoreMidiDriver, JackWinMMEDriver) in progress.

2009-04-03 Stephane Letz  <letz@grame.fr>

	* Simplify JackClient RT code, jack_thread_wait API marked deprecated."

2009-03-29 Stephane Letz  <letz@grame.fr>

	* Cleanup JackInternalClient code.

2009-03-27 Stephane Letz  <letz@grame.fr>

	* Add a buffer size callback for netmaster that just remove the client (it will be recreated with the new parameters).

2009-03-26 Stephane Letz  <letz@grame.fr>

	* First working JackBoomerDriver two threads version.

2009-03-24 Stephane Letz  <letz@grame.fr>

	* New JackBoomerDriver class for Boomer driver on Solaris.
	* Add mixed 32/64 bits mode (off by default).

2009-03-23 Stephane Letz  <letz@grame.fr>

	* Version 1.9.3 started.

2009-03-19 Stephane Letz  <letz@grame.fr>

	* Tim Blechmann optimization patch (inlining some heavy used methods).

2009-03-12 Stephane Letz  <letz@grame.fr>

        * Virtualize and allow overriding of thread creation function, to allow Wine support (from JACK1).

2009-03-12 Stephane Letz  <letz@grame.fr>

        * Try automatic adaptative mode in adapters.
