@@ -20,7 +20,9 @@ Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.
 #include "JackEngineProfiling.h"
 #include "JackGraphManager.h"
 #include "JackClientControl.h"
+#include "JackEngineControl.h"
 #include "JackClientInterface.h"
+#include "JackGlobals.h"
 #include "JackTime.h"
 
 namespace Jack
@@ -312,7 +314,7 @@ void JackEngineProfiling::Profile(JackClientInterface** table,
     fProfileTable[fAudioCycle].fPrevCycleEnd = prev_cycle_end;
     fProfileTable[fAudioCycle].fAudioCycle = fAudioCycle;
 
-    for (int i = REAL_REFNUM; i < CLIENT_NUM; i++) {
+    for (int i = GetEngineControl()->fDriverNum; i < CLIENT_NUM; i++) {
         JackClientInterface* client = table[i];
         JackClientTiming* timing = manager->GetClientTiming(i);
         if (client && client->GetClientControl()->fActive && client->GetClientControl()->fCallback[kRealTimeCallback]) {
