@@ -406,7 +406,6 @@ int main(int argc, char* argv[])
         goto fail_free;
     }
 
-    /*
     // MIDI driver
     if (seen_midi_driver) {
 
@@ -418,7 +417,6 @@ int main(int argc, char* argv[])
 
         jackctl_server_add_slave(server_ctl, midi_driver_ctl);
     }
-    */
 
     notify_server_start(server_name);
 
