@@ -25,6 +25,10 @@ Paul Davis
   Jackdmp changes log
 ---------------------------
 
+2009-05-05 Stephane Letz  <letz@grame.fr>
+
+	* First working version of native MIDI backend (JackCoreMidiDriver, JackWinMMEDriver).
+
 2009-04-22 Stephane Letz  <letz@grame.fr>
 
 	* jackctl_server_load_master renamed to jackctl_server_switch_master, jackctl_server_unload_master is removed.
